// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Configure adds nonce to style tags: DOM 1`] = `
<style
  data-dash="dash"
  nonce="EDNnf03nceIOfn39fn3e9h3sdfa"
>
  
  .dash-1ut9bc3{display:-webkit-box;display:-webkit-flex;display:-ms-flexbox;display:flex;}
</style>
`;

exports[`Configure changes container to document.body 1`] = `
<style
  data-dash="dash"
>
  
  .dash-1ut9bc3{display:-webkit-box;display:-webkit-flex;display:-ms-flexbox;display:flex;}
</style>
`;

exports[`Configure changes key to "css": DOM 1`] = `
<style
  data-dash="css"
>
  
  .css-1ut9bc3{display:-webkit-box;display:-webkit-flex;display:-ms-flexbox;display:flex;}
</style>
`;

exports[`Configure turns off vendor prefixing: DOM 1`] = `
<style
  data-dash="dash"
>
  
  .dash-1ut9bc3{display:flex;}
</style>
`;

exports[`Configure turns on speedy 1`] = `
Object {
  ".dash-1abu38z": Object {
    "0": "display",
    "display": "block",
    "length": 1,
  },
  ".dash-1ut9bc3": Object {
    "0": "display",
    "display": "flex",
    "length": 1,
  },
}
`;
